--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-
-Jennifer Huang <133@holbertonschool.com>
-Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com>
-Oluwatobi Abass <oluwatobiabass5@gmail.com>
-Faith Ikhidero <ikhidero.faithy@gmail.com>
+Ahmed abdirahan yosef <muadhhaji320@gmail.com>
+Caliyare712 <133@holbertonschool.com>
