--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This file lists all individuals having contributed content to the repository.
+# This file have lists all individuals having contributed content to the repository.
 
 Ahmed abdirahan yosef <muadhhaji320@gmail.com>
 Caliyare712 <133@holbertonschool.com>
