--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Ehoneah Obed <ehoneahobed@hotmail.com>
-Anthony Ekim <otoobongekim@gmail.com>
+Ahmed Abdirahman <muadhhaji320@gmail.com>
+Aliyare Warsame <caliyaremohamed@gmail.com>
